--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node --test"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
