--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 
 # next.js
 /.next/
+/.next-*/
 /out/
 
 # production
@@ -41,3 +42,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+public/rewards
