test(gallery): (#17) Add gallery visual tests to jp3-design-visual.test.mjs
Integrate gallery visual tests into the shared jp3-design-visual.test.mjs
file alongside the workspace glow tests. Add createGalleryPage() helper
and 8 Playwright-based tests validating the gallery grid against the JP3
Research Center comp:

- 3-column CSS grid layout with 9 tiles
- 3×3 bounding box arrangement
- Dinosaur thumbnail images and name labels
- Green tile backgrounds via computed style (R<80, G>100, B<80)
- Pixel sampling at tile centers confirming green fill
- Square aspect ratios
- Dark green (#145a22) borders
- Cream-colored uppercase name labels

Remove the standalone jp3-design-visual.visual.mjs (superseded).

Co-Authored-By: seezatnap <seezatnap@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
     "test": "node --test",
-    "test:visual": "node --test --test-concurrency=1 tests/workspace-visual-layout.visual.mjs tests/jp3-design-visual.visual.mjs"
+    "test:visual": "node --test --test-concurrency=1 tests/workspace-visual-layout.visual.mjs tests/jp3-design-visual.test.mjs"
   },
   "dependencies": {
     "@google/genai": "^1.41.0",
